<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    tools:visibility="visible">

    <TextView
        android:id="@+id/tvNumEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_number"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvMoyenne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_average"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvObservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_observation"
        android:visibility="visible" />
</LinearLayout>